--- a/Home.html
+++ b/Home.html
@@ -28,13 +28,13 @@
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Home">
-    <meta property="og:description" content="">
+    <!-- <meta property="og:description" content=""> -->
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-c9e9"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <a href="Home.html" data-page-id="9548344" class="u-image u-logo u-image-1" data-image-width="1600" data-image-height="205" title="Home">
+        <!-- <a href="Home.html" data-page-id="9548344" class="u-image u-logo u-image-1" data-image-width="1600" data-image-height="205" title="Home">
           <img src="images/curi-logo.png" class="u-logo-image u-logo-image-1">
-        </a>
+        </a> -->
       </div></header>
     <section class="u-align-center u-clearfix u-gradient u-section-1" id="sec-32b5">
       <div class="u-clearfix u-sheet u-sheet-1">
@@ -46,7 +46,7 @@
       <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <p class="u-align-justify u-custom-font u-font-pt-sans u-text u-text-grey-80 u-text-1"> Computer-assisted minimally invasive surgery has great potential in benefiting modern operating theatres. The video data streamed from the endoscope provide rich information to support context-awareness for next-generation intelligent surgical systems.&nbsp;To enhance the surgical scene understanding towards image-guided automation, one promising solution is to rely on learning-based methods, which&nbsp;highly relies on large-scale, high-quality and multi-task labelled data. To address this issue, we present and release the AutoLaparo dataset.<br>
           <br>AutoLaparo is a new dataset of integrated multi-tasks for image-guided surgical automation in laparoscopic hysterectomy.&nbsp;The dataset is developed based on full-length videos of entire hysterectomy procedures. Specifically, three different yet highly correlated tasks are formulated in the dataset, including <span style="font-style: italic;">surgical workflow recognition</span>, <span style="font-style: italic;">laparoscope motion prediction</span>, and <span style="font-style: italic;">instrument and key anatomy segmentation</span>. In addition, experimental results with state-of-the-art models are provided as reference benchmarks for further model developments and evaluations on this dataset.<br>
-          <br>[<a href="https://github.com/ziyiwangx/AutoLaparo" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">paper</a>] [<a href="https://github.com/ziyiwangx/AutoLaparo" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">code</a>]<span class="u-text-palette-3-base"></span>
+          <br>[<a href="https://arxiv.org/abs/2208.02049" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">paper</a>] [<a href="https://github.com/ziyiwangx/AutoLaparo" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">code</a>]<span class="u-text-palette-3-base"></span>
         </p>
       </div>
     </section>
