--- a/Home.html
+++ b/Home.html
@@ -253,7 +253,7 @@ The duration of videos ranges from 27 to 112 minutes due to the varying difficul
         </div>
         <p class="u-align-center u-custom-font u-font-pt-sans u-hidden-lg u-hidden-md u-hidden-xl u-text u-text-grey-80 u-text-4">Figure 2. From top to bottom: video examples of typical laparoscopic motions&nbsp;<span style="font-style: italic;">Up, Left, and Zoom-in.</span>
         </p>
-        <p class="u-custom-font u-font-pt-sans u-hidden-sm u-hidden-xs u-text u-text-grey-80 u-text-5">Figure 2. From left to right: video examples of typical laparoscopic motions&nbsp;<span style="font-style: italic;">Up, Left, and Zoom-in.</span>
+        <p class="u-align-center u-custom-font u-font-pt-sans u-hidden-sm u-hidden-xs u-text u-text-grey-80 u-text-5">Figure 2. From left to right: video examples of typical laparoscopic motions&nbsp;<span style="font-style: italic;">Up, Left, and Zoom-in.</span>
         </p>
       </div>
     </section>
