--- a/Home.html
+++ b/Home.html
@@ -55,7 +55,7 @@
         <h2 class="u-align-left u-custom-font u-font-pt-sans u-text u-text-grey-75 u-text-1"><b>Dataset description</b>
         </h2>
         <p class="u-align-justify u-custom-font u-font-pt-sans u-text u-text-grey-80 u-text-2">The AutoLaparo dataset contains 21 videos of laparoscopic hysterectomy collected from Prince of Wales Hospital, Hong Kong, during October to December, 2018.&nbsp;The release of this dataset has been approved by ​Joint CUHK-NTEC Clinical Research Ethics Committee and the data are protected without disclosure of any personal information. The videos are recorded at 25 fps with a standard resolution of 1920×1080 pixels.&nbsp;
-The duration of videos ranges from 27 to 112 minutes due to the varying difficulties of the surgeries.&nbsp;&nbsp;After pre-processing, the average duration is 66 minutes and the total duration is 1388 minutes, reaching a large-scale dataset with high-quality. Three sub-datasets are designed for the following three tasks and they are<br>also highly-correlated by applying a three-tier annotation process.&nbsp;<br>
+The duration of videos ranges from 27 to 112 minutes due to the varying difficulties of the surgeries.&nbsp;&nbsp;After pre-processing, the average duration is 66 minutes and the total duration is 1388 minutes, reaching a large-scale dataset with high-quality. Three sub-datasets are designed for the following three tasks and they are also highly-correlated by applying a three-tier annotation process.&nbsp;<br>
         </p>
       </div>
     </section>
@@ -141,8 +141,8 @@ The duration of videos ranges from 27 to 112 minutes due to the varying difficul
         <h2 class="u-align-left u-custom-font u-font-pt-sans u-text u-text-grey-75 u-text-1"><b> Task 2 Laparoscope motion prediction</b>
         </h2>
         <p class="u-align-justify u-custom-font u-font-pt-sans u-text u-text-2">
-          <span class="u-text-grey-80">To promote learning-based automatic FoV control, this sub-dataset is built with selected clips that corresponds the laparoscope visual feedback to its motion mode.&nbsp;&nbsp;In the dataset, 300 clips are carefully selected from Phase 2-4 of the aforementioned 21 videos and each clip lasts for 10 seconds. These clips contain typical laparoscope motions and the motion time <span style="font-style: italic;">T</span> is set as the fifth second. Seven types of motion modes are defined, including one <span style="font-style: italic;">S</span>
-            <span style="font-style: italic;">tatic </span>mode and six non-static mode: <span style="font-style: italic;">Up</span>, <span style="font-style: italic;">Down</span>, <span style="font-style: italic;">Left</span>, <span style="font-style: italic;">Right</span>, <span style="font-style: italic;">Zoom-in</span>, and <span style="font-style: italic;">Zoom-out</span>.
+          <span class="u-text-grey-80">To promote learning-based automatic FoV control, this sub-dataset is built with selected clips that corresponds the laparoscope visual feedback to its motion mode.&nbsp;&nbsp;In the dataset, 300 clips are carefully selected from Phase 2-4 of the aforementioned 21 videos and each clip lasts for 10 seconds. These clips contain typical laparoscope motions and the motion time <span style="font-style: italic;">T</span> is set as the fifth second. Seven types of motion modes are defined, including one 
+            <span style="font-style: italic;">Static </span>mode and six non-static mode: <span style="font-style: italic;">Up</span>, <span style="font-style: italic;">Down</span>, <span style="font-style: italic;">Left</span>, <span style="font-style: italic;">Right</span>, <span style="font-style: italic;">Zoom-in</span>, and <span style="font-style: italic;">Zoom-out</span>.
           </span>
           <br>
           <br>
@@ -265,7 +265,7 @@ The duration of videos ranges from 27 to 112 minutes due to the varying difficul
           <span class="u-text-grey-80">For each clip in Task 2, six frames are sampled at 1fps, i.e., frames at time t=0,1,2,3,4,5, and annotated with pixel-wise segmentation, which provides ground truth for Task 3 and also support Task 1 and 2 as additional modality for advanced scene understanding.&nbsp;&nbsp;In the dataset, four types of instruments and one key anatomy is annotated in the dataset:</span>
           <br>
         </p>
-        <p class="u-align-center u-custom-font u-font-pt-sans u-large-text u-text u-text-grey-80 u-text-variant u-text-3">Table 3. Total number of presences in clips and fram​es, and total number of annotations of each class in the segmentation dataset. <span style="font-style: italic;">m</span> and <span style="font-style: italic;">s</span> denote the <span style="font-style: italic;">manipulator </span>and <span style="font-style: italic;">shafr </span>of the instrument, respectively
+        <p class="u-align-center u-custom-font u-font-pt-sans u-large-text u-text u-text-grey-80 u-text-variant u-text-3">Table 3. Total number of presences in clips and fram​es, and total number of annotations of each class in the segmentation dataset. <span style="font-style: italic;">m</span> and <span style="font-style: italic;">s</span> denote the <span style="font-style: italic;">manipulator </span>and <span style="font-style: italic;">shaff </span>of the instrument, respectively
         </p>
         <div class="u-expanded-width-sm u-expanded-width-xs u-table u-table-responsive u-table-1">
           <table class="u-table-entity">
