--- a/index.html
+++ b/index.html
@@ -448,7 +448,19 @@ The duration of videos ranges from 27 to 112 minutes due to the varying difficul
             </span>
             <span style="font-weight: 400;">The released dataset is provided only for&nbsp;academic research, NOT for commercial use.&nbsp;</span></b>
           <br>&nbsp;<br>
-          <span style="font-weight: 700;">[Citation]</span>&nbsp;<br>- If you use this dataset, please cite:&nbsp;<br>...<span style="font-style: italic;">TBD</span>...<br>&nbsp;<br>For further question about the dataset, please contact ziyiwangx@gmail.com.&nbsp;
+          <span style="font-weight: 700;">[Citation]</span>&nbsp;<br>- If you use this dataset, please cite:&nbsp;<br></span>
+          <div class="text-dark-bg">
+            <pre>
+@InProceedings{wang2022autolaparo,
+    title = {AutoLaparo: A New Dataset of Integrated Multi-tasks for Image-guided Surgical Automation in Laparoscopic Hysterectomy},
+    author = {Wang, Ziyi and Lu, Bo and Long, Yonghao and Zhong, Fangxun and Cheung, Tak-Hong and Dou, Qi and Liu, Yunhui},
+    booktitle = {International Conference on Medical Image Computing and Computer-Assisted Intervention},
+    pages = {486--496},
+    year = {2022},
+    organization = {Springer}
+}</pre>
+          </div>
+          <span><br>&nbsp;<br>For further question about the dataset, please contact ziyiwangx@gmail.com.&nbsp;
         </p>
       </div>
     </section>
