--- a/Home.html
+++ b/Home.html
@@ -226,8 +226,8 @@ The duration of videos ranges from 27 to 112 minutes due to the varying difficul
         </div>
         <div class="u-uploaded-video u-video u-video-contain u-video-1">
           <div class="embed-responsive">
-            <video class="embed-responsive-item" muted="">
-              <source src="files/Up-1_2.mp4" type="video/mp4">
+            <video class="embed-responsive-item" preload="metadata" muted="">
+              <source src="files/Up-1_2.mp4#t=0.001" type="video/mp4">
               <p>Your browser does not support HTML5 video.</p>
             </video>
             <button class="u-video-poster"></button>
@@ -235,8 +235,8 @@ The duration of videos ranges from 27 to 112 minutes due to the varying difficul
         </div>
         <div class="u-uploaded-video u-video u-video-contain u-video-2">
           <div class="embed-responsive">
-            <video class="embed-responsive-item" muted="">
-              <source src="files/Zoomin_2.mp4" type="video/mp4">
+            <video class="embed-responsive-item" preload="metadata" muted="">
+              <source src="files/Zoomin_2.mp4#t=0.001" type="video/mp4">
               <p>Your browser does not support HTML5 video.</p>
             </video>
             <button class="u-video-poster"></button>
@@ -244,8 +244,8 @@ The duration of videos ranges from 27 to 112 minutes due to the varying difficul
         </div>
         <div class="u-uploaded-video u-video u-video-contain u-video-3">
           <div class="embed-responsive">
-            <video class="embed-responsive-item" muted="">
-              <source src="files/mode_left_1.mp4" type="video/mp4">
+            <video class="embed-responsive-item" preload="metadata" muted="">
+              <source src="files/mode_left_1.mp4#t=0.001" type="video/mp4">
               <p>Your browser does not support HTML5 video.</p>
             </video>
             <button class="u-video-poster"></button>
@@ -449,19 +449,9 @@ The duration of videos ranges from 27 to 112 minutes due to the varying difficul
             <span style="font-weight: 400;">The released dataset is provided only for&nbsp;academic research, NOT for commercial use.&nbsp;</span></b>
           <br>&nbsp;<br>
           <span style="font-weight: 700;">[Citation]</span>&nbsp;<br>- If you use this dataset, please cite:&nbsp;<br></span>
-          <div class="text-dark-bg">
-            <pre>
-@InProceedings{wang2022autolaparo,
-    title = {AutoLaparo: A New Dataset of Integrated Multi-tasks for Image-guided Surgical Automation in Laparoscopic Hysterectomy},
-    author = {Wang, Ziyi and Lu, Bo and Long, Yonghao and Zhong, Fangxun and Cheung, Tak-Hong and Dou, Qi and Liu, Yunhui},
-    booktitle = {International Conference on Medical Image Computing and Computer-Assisted Intervention},
-    pages = {486--496},
-    year = {2022},
-    organization = {Springer}
-}</pre>
-          </div>
-          <span><br>&nbsp;<br>For further question about the dataset, please contact ziyiwangx@gmail.com.&nbsp;
+          <pre class="text-dark-bg">@InProceedings{wang2022autolaparo,<br>&nbsp;&nbsp;&nbsp;&nbsp;title = {AutoLaparo: A New Dataset of Integrated Multi-tasks for Image-guided Surgical Automation in Laparoscopic Hysterectomy},<br>&nbsp;&nbsp;&nbsp;&nbsp;author = {Wang, Ziyi and Lu, Bo and Long, Yonghao and Zhong, Fangxun and Cheung, Tak-Hong and Dou, Qi and Liu, Yunhui},<br>&nbsp;&nbsp;&nbsp;&nbsp;booktitle = {International Conference on Medical Image Computing and Computer-Assisted Intervention},<br>&nbsp;&nbsp;&nbsp;&nbsp;pages = {486--496},<br>&nbsp;&nbsp;&nbsp;&nbsp;year = {2022},<br>&nbsp;&nbsp;&nbsp;&nbsp;organization = {Springer}<br>}</pre>
         </p>
+        <p class="u-align-justify u-custom-font u-font-pt-sans u-text u-text-3">For further question about the dataset, please contact <a href="mailto:ziyiwangx@gmail.com">ziyiwangx@gmail.com</a>.&nbsp;</p>
       </div>
     </section>
     
